--- a/tool/style.css
+++ b/tool/style.css
@@ -53,7 +53,7 @@
     margin-right: 20px;
     padding: 5px 0 0 0;
     width: 385px;
-    border-bottom: 3px solid #0f7056;
+    border-bottom: 3px solid #afe7c6;
     border-top: none;
     border-right: none;
     border-left: none;
@@ -110,7 +110,7 @@
     line-height: 22px;
     text-align: center;
     text-transform: capitalize;
-    fill: #0f7056;
+    fill: #afe7c6;
   }
 
   .axis-label-y {
