--- a/tool/style.css
+++ b/tool/style.css
@@ -10,18 +10,27 @@
     overflow-x:hidden;
   }
 
-  #dropdowns {
-    postion: relative;
-    margin-left: 129px;
-    padding-left: 6rem;
-    font-size:24px;
-    font-family: 'Poppins', sans-serif;
-    width: 100%;
-    margin-bottom: 5rem;
-    margin-top: 2rem;
+  @media (min-width: 1024px) {
+    #dropdowns {
+      display: block;
+      postion: relative;
+      margin-left: 129px;
+      padding-left: 6rem;
+      font-size:24px;
+      font-family: 'Poppins', sans-serif;
+      width: 100%;
+      margin-bottom: 5rem;
+      margin-top: 2rem;
+    }
   }
 
-  @media (max-width: 768px) {
+  @media (max-width: 1023px) {
+    #dropdowns {
+      display: none;
+    }
+  }
+
+  @media (max-width: 991px) {
     #dropdowns {
       postion: relative;
       margin-left: 0;
@@ -58,8 +67,8 @@
     border-right: none;
     border-left: none;
     box-shadow: none;
-    color: #cdcfd5;
-    background: transparent url("../assets/carrot.png") no-repeat 86% 50%;
+    color: #FFFFFF;
+    background: transparent url("../assets/carrot2.png") no-repeat 86% 50%;
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
@@ -79,8 +88,8 @@
     border-right: none;
     border-left: none;
     box-shadow: none;
-    color: #cdcfd5;
-    background: transparent url("../assets/carrot.png") no-repeat 86% 50%;
+    color: #FFFFFF;
+    background: transparent url("../assets/carrot2.png") no-repeat 86% 50%;
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
@@ -100,7 +109,7 @@
   .axis path,
   .axis line {
     fill: none;
-    stroke: #cdcfd5;
+    stroke: #FFFFFF;
     shape-rendering: crispEdges;
   }
 
@@ -126,7 +135,7 @@
     font-size: 13px;
     text-align: center;
     position: absolute;
-    fill: #cdcfd5;
+    fill: #FFFFFF;
   }
 
 
@@ -142,145 +151,202 @@
 
   .dot.hovered {
     stroke-width: 0.2rem;
-    stroke: #cdcfd5;
+    stroke: #FFFFFF;
+  }
+  @media (min-width: 1024px) {
+   #graph-area {
+    display: block;
+  }
+}
+@media (max-width: 1023px) {
+ #graph-area {
+  display: none;
+}
+}
+
+
+
+/* Legend styles */
+
+#legend .legend-title {
+  font-size: 1.2rem;
+  text-transform: uppercase;
+}
+
+#legend circle {
+  fill: none;
+  stroke: #000;
+}
+
+#legend .circle-label {
+  font-size: 1rem;
+}
+
+/* Tooltip div */
+
+div.tooltip {
+  position: absolute;
+  text-align: left;
+  max-width: 17rem;
+  padding: 1rem;
+  font-family: 'Poppins', sans-serif;
+  font-size: 12px;
+  line-height: 20px;
+  background: #828187;
+  color: #FFFFFF;
+  pointer-events: none;
+}
+
+/* Tooltip arrow */
+.tooltip:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin-left: -15px;
+  border-width: 15px;
+  border-style: solid;
+  border-color: #828187 transparent transparent transparent;
+}
+
+
+
+.h4 {
+  margin-left: 6rem;
+  padding-bottom: 8px;
+  width: 12rem;
+}
+
+h2 a {
+  text-decoration: none;
+  color: #ffd849;
+}
+
+@media (min-width: 1440px) {
+  #about-text {
+    postion: relative;
+    margin-top: 10rem;
+    width: calc(100% - 129px);
+    margin-left: 129px;
+    padding-right: 15rem;
+    padding-left: 6rem;
+  }
+}
+@media (max-width: 1439px) {
+  #about-text {
+    postion: relative;
+    margin-top: 10rem;
+    width: 100%;
+    margin-left: 129px;
+    padding-right: 15rem;
+    padding-left: 6rem;
   }
 
-  #graph-area {
+  #error-text {
+    postion: relative;
+    margin-top: 10rem;
+    width: 100%;
+    margin-left: 129px;
+    padding-right: 15rem;
+    padding-left: 6rem;
+  }
+}
 
+@media (max-width: 1023px) {
+  #about-text {
+   margin-top: 0;
+ }
+}
+
+@media (min-width: 1024px) {
+  #error-text {
+    display: none;
   }
 
+}
 
-
-  /* Legend styles */
-
-  #legend .legend-title {
-    font-size: 1.2rem;
-    text-transform: uppercase;
+@media (max-width: 991px) {
+  #error-text {
+    postion: relative;
+    margin-top: 8rem;
+    width: 100%;
+    margin-left: 0;
+    padding-right: 0;
+    padding-left: 0;
   }
 
-  #legend circle {
-    fill: none;
-    stroke: #000;
+  #about-text {
+    postion: relative;
+    margin-top: 0;
+    width: 100%;
+    margin-left: 0;
+    padding-right: 0;
+    padding-left: 0;
   }
 
-  #legend .circle-label {
-    font-size: 1rem;
-  }
-
-  /* Tooltip div */
-
-  div.tooltip {
-    position: absolute;
+  h1,
+  .h1 {
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 30px;
     text-align: left;
-    max-width: 17rem;
-    padding: 1rem;
-    font-family: 'Poppins', sans-serif;
-    font-size: 12px;
-    line-height: 20px;
-    background: #828187;
-    color: #cdcfd5;
-    pointer-events: none;
+    color: #FFFFFF;
+
   }
 
-  /* Tooltip arrow */
-  .tooltip:after {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    margin-left: -15px;
-    border-width: 15px;
-    border-style: solid;
-    border-color: #828187 transparent transparent transparent;
+  h2,
+  .h2 {
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 23px;
+    text-align: left;
+
   }
-
-
 
   .h4 {
-    margin-left: 6rem;
+    border-bottom: 3px solid #FFFFFF;
+    margin-left: 3rem;
     padding-bottom: 8px;
     width: 12rem;
+    margin-right: 15px;
   }
 
-  h2 a {
-    text-decoration: none;
-    color: #ffd849;
+}
+
+
+
+#graph-area {
+  position: absolute;
+}
+
+@media (max-width: 399px) {
+  img.large {
+    display: none;
   }
-
-  @media (min-width: 1440px) {
-    #about-text {
-      postion: relative;
-      margin-top: 10rem;
-      width: calc(100% - 129px);
-      margin-left: 129px;
-      padding-right: 15rem;
-      padding-left: 6rem;
-    }
+  img.small {
+    display: block;
   }
-  @media (max-width: 1439px) {
-    #about-text {
-      postion: relative;
-      margin-top: 10rem;
-      width: 100%;
-      margin-left: 129px;
-      padding-right: 15rem;
-      padding-left: 6rem;
-    }
+}
+
+@media (min-width: 400px) {
+  img.large {
+    display: block;
   }
-
-  @media (max-width: 768px) {
-    #about-text {
-      postion: relative;
-      margin-top: 8rem;
-      width: 100%;
-      margin-left: 0;
-      padding-right: 0;
-      padding-left: 0;
-    }
-    h2,
-    .h2 {
-      font-size: 18px;
-      font-weight: 400;
-      line-height: 22px;
-      text-align: left;
-
-    }
-
-    .h4 {
-      border-bottom: 3px solid #cdcfd5;
-      margin-left: 3rem;
-      padding-bottom: 8px;
-      width: 12rem;
-    }
-
+  img.small {
+    display: none;
   }
+}
 
 
 
-  #graph-area {
-    position: absolute;
-  }
-
-  @media (max-width: 399px) {
-    img.large {
-      display: none;
-    }
-    img.small {
-      display: block;
-    }
-  }
-
-  @media (min-width: 400px) {
-    img.large {
-      display: block;
-    }
-    img.small {
-      display: none;
-    }
-  }
-
-
-
-
-  </style>
+q {
+  quotes: "“" "”" "‘" "’";
+}
+q:before {
+  content: open-quote;
+}
+q:after {
+  content: close-quote;
+}
+</style>
 
