--- a/tool/style.css
+++ b/tool/style.css
@@ -16,7 +16,8 @@
       postion: relative;
       margin-left: 129px;
       padding-left: 6rem;
-      font-size:24px;
+      /*font-size:24px;*/
+      font-size:14px;
       font-family: 'Poppins', sans-serif;
       width: 100%;
       margin-bottom: 5rem;
@@ -40,6 +41,9 @@
     }
   }
 
+  #dropdowns  {
+    color: red;
+  }
 
   .select-style {
     padding: 0;
