Updated CSS to latest from within Olivia's PRs, manually.

--- a/tool/style.css
+++ b/tool/style.css
@@ -1,180 +1,178 @@
-  <style>
 
+html {
+  font-size: 62.5%;     /* Brings it to 10px, since default is usually 16px. Makes 1rem = 10px. */
+}
 
-  body {
+body {
+  font-family: 'Poppins', sans-serif;
+  font-size: 1rem;
+  color: black;
+  /*background-color: #FCC006;*/
+  text-align: left;
+  overflow-x:hidden;
+}
+
+@media (min-width: 1024px) {
+  #dropdowns {
+    display: block;
+    postion: relative;
+    margin-left: 129px;
+    padding-left: 6rem;
+    font-size:24px;
     font-family: 'Poppins', sans-serif;
-    font-size: 1rem;
-    color: black;
-    background-color: #FCC006;
-    text-align: left;
-    overflow-x:hidden;
+    width: 100%;
+    margin-bottom: 5rem;
+    margin-top: 2rem;
   }
+}
 
-  @media (min-width: 1024px) {
-    #dropdowns {
-      display: block;
-      postion: relative;
-      margin-left: 129px;
-      padding-left: 6rem;
-      font-size:24px;
-      font-family: 'Poppins', sans-serif;
-      width: 100%;
-      margin-bottom: 5rem;
-      margin-top: 2rem;
-    }
+@media (max-width: 1023px) {
+  #dropdowns {
+    display: none;
   }
+}
 
-  @media (max-width: 1023px) {
-    #dropdowns {
-      display: none;
-    }
+@media (max-width: 991px) {
+  #dropdowns {
+    postion: relative;
+    margin-left: 0;
+    padding-left: 0;
+    font-size:24px;
+    font-family: 'Poppins', sans-serif;
   }
+}
 
-  @media (max-width: 991px) {
-    #dropdowns {
-      postion: relative;
-      margin-left: 0;
-      padding-left: 0;
-      font-size:24px;
-      font-family: 'Poppins', sans-serif;
-    }
-  }
-
-
-  .select-style {
-    padding: 0;
-    margin-right: 30px;
-    margin-bottom: 7px;
-    width: 335px;
-    border-radius: 0px;
-    border: none;
-    overflow: hidden;
-    box-shadow: none;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
+.select-style {
+  padding: 0;
+  margin-right: 30px;
+  margin-bottom: 7px;
+  width: 335px;
+  border-radius: 0px;
+  border: none;
+  overflow: hidden;
+  box-shadow: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
 
 
-  }
+}
 
-  .select-style.x select {
-    border-radius: 0px;
-    margin-right: 20px;
-    padding: 5px 0 0 0;
-    width: 385px;
-    border-bottom: 3px solid #3BADE5;
-    border-top: none;
-    border-right: none;
-    border-left: none;
-    box-shadow: none;
-    color: #2A2B2C;
-    background: transparent url("../assets/carrot3.png") no-repeat 86% 50%;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    text-transform: capitalize;
+.select-style.x select {
+  border-radius: 0px;
+  margin-right: 20px;
+  padding: 5px 0 0 0;
+  width: 385px;
+  border-bottom: 3px solid #3BADE5;
+  border-top: none;
+  border-right: none;
+  border-left: none;
+  box-shadow: none;
+  color: #2A2B2C;
+  background: transparent url("../assets/carrot3.png") no-repeat 86% 50%;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  text-transform: capitalize;
+}
 
+.select-style.y select {
+  border-radius: 0px;
+  margin-right: 20px;
+  padding: 5px 0 0 0;
+  width: 385px;
+  border-bottom: 3px solid #FCC006;
+  border-top: none;
+  border-right: none;
+  border-left: none;
+  box-shadow: none;
+  color: #2A2B2C;
+  background: transparent url("../assets/carrot3.png") no-repeat 86% 50%;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  text-transform: capitalize;
 
-  }
+}
 
+.select-style select:hover{
+  cursor: pointer;
+}
 
-  .select-style.y select {
-    border-radius: 0px;
-    margin-right: 20px;
-    padding: 5px 0 0 0;
-    width: 385px;
-    border-bottom: 3px solid #FCC006;
-    border-top: none;
-    border-right: none;
-    border-left: none;
-    box-shadow: none;
-    color: #2A2B2C;
-    background: transparent url("../assets/carrot3.png") no-repeat 86% 50%;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    text-transform: capitalize;
+.select-style select:focus {
+  outline: none;
+}
+/* Chart styles */
 
-  }
+.axis path,
+.axis line {
+  fill: none;
+  stroke: #2A2B2C;
+  shape-rendering: crispEdges;
+}
 
-  .select-style select:hover{
-    cursor: pointer;
-  }
+.axis line {
+  margin-left: 10px;
+}
 
-  .select-style select:focus {
-    outline: none;
-  }
-  /* Chart styles */
+.axis-label-x {
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 22px;
+  text-align: center;
+  text-transform: capitalize;
+  fill: #3BADE5;
+}
 
-  .axis path,
-  .axis line {
-    fill: none;
-    stroke: #2A2B2C;
-    shape-rendering: crispEdges;
-  }
+.axis-label-y {
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 22px;
+  text-align: center;
+  text-transform: capitalize;
+  fill:#FCC006;
+}
 
-  .axis line {
-    margin-left: 10px;
-  }
+.axis .tick text {
+  font-size: 13px;
+  text-align: center;
+  position: absolute;
+  fill: #2A2B2C;
+}
 
-  .axis-label-x {
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 22px;
-    text-align: center;
-    text-transform: capitalize;
-    fill: #3BADE5;
-  }
+.axis .tick text.small {
+  font-size: 11px;
+}
 
-  .axis-label-y {
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 22px;
-    text-align: center;
-    text-transform: capitalize;
-    fill:#FCC006;
-  }
+.axis .tick text.smaller {
+  font-size: 9px;
+}
 
-  .axis .tick text {
-    font-size: 13px;
-    text-align: center;
-    position: absolute;
-    fill: #2A2B2C;
-  }
+.dot {
+  stroke-width: 0.05rem;
+  stroke: none;
+}
 
-  .axis .tick text.small {
-    font-size: 11px;
-  }
+.dot:hover{
+  cursor: crosshair;
+}
 
-  .axis .tick text.smaller {
-    font-size: 9px;
-  }
+.dot.hovered {
+  stroke-width: 0.2rem;
+  stroke: #2A2B2C;
+}
 
-  .dot {
-    stroke-width: 0.05rem;
-    stroke: none;
-  }
-
-  .dot:hover{
-    cursor: crosshair;
-  }
-
-  .dot.hovered {
-    stroke-width: 0.2rem;
-    stroke: #2A2B2C;
-  }
-  @media (min-width: 1024px) {
-   #graph-area {
+@media (min-width: 1024px) {
+ #graph-area {
     display: block;
   }
 }
+
 @media (max-width: 1023px) {
- #graph-area {
-  display: none;
+  #graph-area {
+    display: none;
+  }
 }
-}
-
-
 
 /* Legend styles */
 
@@ -313,6 +311,7 @@ h2 a {
 
   }
 
+
   .h4 {
     border-bottom: 3px solid #2A2B2C;
     margin-left: 3rem;
@@ -358,5 +357,3 @@ q:before {
 q:after {
   content: close-quote;
 }
-</style>
-
