--- a/tool/style.css
+++ b/tool/style.css
@@ -166,12 +166,29 @@ body {
  #graph-area {
     display: block;
   }
+  #viz-loader {
+    display: block;
+    width: 300px;
+    margin: 0 auto;
+    text-align: center;
+    z-index: 100;
+    position: relative;
+  }
 }
 
 @media (max-width: 1023px) {
   #graph-area {
     display: none;
   }
+  #viz-loader {
+    display: none;
+  }
+}
+
+#dropdown-viz {
+  display: none;
+  background-color: #f5f5f6;
+  margin-top: -100px;
 }
 
 /* Legend styles */
@@ -320,12 +337,6 @@ h2 a {
     margin-right: 15px;
   }
 
-}
-
-
-
-#graph-area {
-  position: absolute;
 }
 
 @media (max-width: 399px) {
