--- a/tool/style.css
+++ b/tool/style.css
@@ -7,7 +7,7 @@ body {
   font-family: 'Poppins', sans-serif;
   font-size: 1rem;
   color: black;
-  /*background-color: #FCC006;*/
+  /*background-color: #ff5946;*/
   text-align: left;
   overflow-x:hidden;
 }
@@ -63,12 +63,12 @@ body {
   margin-right: 20px;
   padding: 5px 0 0 0;
   width: 385px;
-  border-bottom: 3px solid #3BADE5;
+  border-bottom: 3px solid #575dc5;
   border-top: none;
   border-right: none;
   border-left: none;
   box-shadow: none;
-  color: #2A2B2C;
+  color: #1a1a1a;
   background: transparent url("../assets/carrot3.png") no-repeat 86% 50%;
   -webkit-appearance: none;
   -moz-appearance: none;
@@ -81,12 +81,12 @@ body {
   margin-right: 20px;
   padding: 5px 0 0 0;
   width: 385px;
-  border-bottom: 3px solid #FCC006;
+  border-bottom: 3px solid #ff5946;
   border-top: none;
   border-right: none;
   border-left: none;
   box-shadow: none;
-  color: #2A2B2C;
+  color: #1a1a1a;
   background: transparent url("../assets/carrot3.png") no-repeat 86% 50%;
   -webkit-appearance: none;
   -moz-appearance: none;
@@ -107,7 +107,7 @@ body {
 .axis path,
 .axis line {
   fill: none;
-  stroke: #2A2B2C;
+  stroke: #1a1a1a;
   shape-rendering: crispEdges;
 }
 
@@ -121,7 +121,7 @@ body {
   line-height: 22px;
   text-align: center;
   text-transform: capitalize;
-  fill: #3BADE5;
+  fill: #575dc5;
 }
 
 .axis-label-y {
@@ -130,14 +130,14 @@ body {
   line-height: 22px;
   text-align: center;
   text-transform: capitalize;
-  fill:#FCC006;
+  fill:#ff5946;
 }
 
 .axis .tick text {
   font-size: 13px;
   text-align: center;
   position: absolute;
-  fill: #2A2B2C;
+  fill: #1a1a1a;
 }
 
 .axis .tick text.small {
@@ -159,23 +159,34 @@ body {
 
 .dot.hovered {
   stroke-width: 0.2rem;
-  stroke: #2A2B2C;
+  stroke: #1a1a1a;
+}
+
+.footer-text {
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 26px;
+  padding-top: 15px;
+  border-top: 3px solid #1a1a1a;
 }
 
 @media (min-width: 1024px) {
  #graph-area {
-    display: block;
-    margin-top: 1rem;
-    margin-bottom: 4rem;
-  }
-  #viz-loader {
-    display: block;
-    width: 300px;
-    margin: 0 auto;
-    text-align: center;
-    z-index: 100;
-    position: relative;
-  }
+  display: block;
+  margin-top: 0;
+  margin-bottom: 1rem;
+}
+#viz-loader {
+  display: block;
+  width: 300px;
+  margin: 0 auto;
+  text-align: center;
+  z-index: 100;
+  position: relative;
+}
+#footer-text-box-mobile {
+  display: none;
+}
 }
 
 @media (max-width: 1023px) {
@@ -185,11 +196,26 @@ body {
   #viz-loader {
     display: none;
   }
+  #footer-text-box {
+    display: none;
+  }
+  #footer-text-box-mobile {
+    postion: relative;
+    margin-top: 0;
+    width: 100%;
+    margin-left: 0;
+    padding-right: 0;
+    padding-left: 0;
+  }
+
+  #dropdown-viz {
+    opacity: 0;
+  }
 }
 
 #dropdown-viz {
   display: none;
-  background-color: #f5f5f6;
+  background-color: #f1efea;
   margin-top: -100px;
 }
 
@@ -220,7 +246,7 @@ div.tooltip {
   font-size: 12px;
   line-height: 20px;
   background: #a5a4a0;
-  color: #2A2B2C;
+  color: #1a1a1a;
   pointer-events: none;
 }
 
@@ -241,12 +267,12 @@ div.tooltip {
 .h4 {
   margin-left: 6rem;
   padding-bottom: 8px;
-  width: 12rem;
+  width: 14rem;
 }
 
 h2 a {
   text-decoration: none;
-  color: #F75434;
+  color: #36c1ab;
 }
 
 @media (min-width: 1440px) {
@@ -258,15 +284,34 @@ h2 a {
     padding-right: 15rem;
     padding-left: 6rem;
   }
+
+  #footer-text-box {
+    postion: relative;
+    margin-top: 0;
+    width: calc(100% - 129px);
+    margin-left: 129px;
+    padding-right: 15rem;
+    padding-left: 6rem;
+  }
 }
 @media (max-width: 1439px) {
   #about-text {
     postion: relative;
     margin-top: 10rem;
-    width: 100%;
+    width: calc(100% - 129px);
     margin-left: 129px;
     padding-right: 15rem;
     padding-left: 6rem;
+  }
+
+  #footer-text-box {
+    postion: relative;
+    margin-top: 0;
+    width: calc(100% - 129px);
+    margin-left: 129px;
+    padding-right: 15rem;
+    padding-left: 6rem;
+
   }
 
   #error-text {
@@ -295,7 +340,7 @@ h2 a {
 @media (max-width: 991px) {
   #error-text {
     postion: relative;
-    margin-top: 8rem;
+    margin-top: 10rem;
     width: 100%;
     margin-left: 0;
     padding-right: 0;
@@ -311,13 +356,15 @@ h2 a {
     padding-left: 0;
   }
 
+
+
   h1,
   .h1 {
     font-size: 24px;
     font-weight: 400;
     line-height: 30px;
     text-align: left;
-    color: #2A2B2C;
+    color: #1a1a1a;
 
   }
 
@@ -332,10 +379,10 @@ h2 a {
 
 
   .h4 {
-    border-bottom: 3px solid #2A2B2C;
+    border-bottom: 3px solid #1a1a1a;
     margin-left: 3rem;
     padding-bottom: 8px;
-    width: 12rem;
+    width: 14rem;
     margin-right: 15px;
   }
 
@@ -358,8 +405,6 @@ h2 a {
     display: none;
   }
 }
-
-
 
 q {
   quotes: "“" "”" "‘" "’";
